Acrescentado iframe contendo um pequena e simples previa do site

--- a/vendas.html
+++ b/vendas.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Vendas</h1>
     <a href="index.html"></a>
+    <iframe src="src/index.html" width="100%" height="600px" frameborder="0"></iframe>
 </body>
 </html>
