--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 </font><!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Home</h1>
-    <a href="vendas.html">Vendas</a>
-</body>
-</html>
+</font><html lang="pt-br">
+</font><head>
+</font>    <meta charset="UTF-8">
+</font>    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</font>    <title>Document</title>
+</font></head>
+</font><body>
+</font>    <h1>Home</h1>
+</font>    <a href="vendas.html">Vendas</a>
+</font></body>
+</font></html>
